--- a/SailScores.Web/Views/Shared/_ClubLayout.cshtml
+++ b/SailScores.Web/Views/Shared/_ClubLayout.cshtml
@@ -64,6 +64,15 @@
                         @localizer["Races"]
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a asp-area=""
+                       asp-controller="Regatta"
+                       asp-action="Index"
+                       asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"]"
+                       class="nav-link">
+                        @localizer["Regattas"]
+                    </a>
+                </li>
             </ul>
             <ul class="navbar-nav navbar-right">
                 <li class="nav-item"><a href="~/" class="nav-link">SailScores.com</a></li>
