Notes for scoring systems

--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -16,6 +16,10 @@
             <li>Open-source, volunteer-driven.</li>
             <li>Club landing page can include links to home page or results on other systems.</li>
             <li>Smartphone, MacOS, and Windows friendly.</li>
+            <li>Support for Appendix A Low Point Scoring, 
+                <a href="https://www.ussailing.org/competition/rules-officiating/racing-rules/scoring-a-long-series/">
+                High Point Percentage,</a> or customized club systems.
+            </li>
         </ul>
     </div>
     <div class="col-md-6">
