--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -6,33 +6,85 @@
     @ViewData["Title"]
 </h3>
 <h3>
+    August 10th, 2019 Update
+</h3>
+<h5>Release Notes</h5>
+<p>
+    Custom Scoring systems are now working.
+    <ul>
+        <li>
+            Three base systems are currently implemented: Appendix A (a.k.a. low point)
+            for Series, Appendix A for Regattas, and High Point Percentage.
+        </li>
+        <li>
+            Clubs can implement custom scoring systems that derive from the base
+            systems, but customize codes or the discard pattern.
+        </li>
+        <li> A club should have a default scoring system set. (It can be one of the
+        built in systems.)</li>
+        <li>Series can then be set to use a different system.</li>
+    </ul>
+    Also some enhancements have been made to support long series: helm name is now
+    shown every 25 races and as the last column of the results.
+</p>
+<h5>Coming soon</h5>
+<p>
+    The next big feature on the way will be support for regattas: We are aiming
+    to have this done in time to use SailScores for the LHYC fall Die Hard Regatta.
+</p>
+<p>
+    Some other small enhancments on the way:
+    <ul>
+        <li>
+            Indication if a skipper's ranking has
+            gone up or down in the recent past with a trend indicator.
+        </li>
+        <li>
+            Localization support: clubs can have a defined locale that will control
+            display of dates and keywords can be translated. 
+        </li>
+    </ul>
+</p>
+<h3>
     June 7th, 2019 Update
 </h3>
 <h5>Release Notes</h5>
 <p>
-    Enhancesments to the race editing page are getting rolled out today:
+    Enhancements to the race editing page are getting rolled out today:
     <ul>
-        <li>The page automatically scrolls to show the last entered result. (This
-        required that the Add Result field get moved toward the bottom of the page.) </li>
-        <li>A few weeks ago we added a field to track scheduled, raced and abandoned
-        races. Scheduled and abandoned races don't show up in series views on small
-        devices and aren't used for scoring.</li>
-        <li>The Name and Description fields have been moved to Additional Fields section
-        that is collapse by default.</li>
-        <li>The format of the result list has been improved, including more details 
-        score codes.</li>
+        <li>
+            The page automatically scrolls to show the last entered result. (This
+            required that the Add Result field get moved toward the bottom of the page.)
+        </li>
+        <li>
+            A few weeks ago we added a field to track scheduled, raced and abandoned
+            races. Scheduled and abandoned races don't show up in series views on small
+            devices and aren't used for scoring.
+        </li>
+        <li>
+            The Name and Description fields have been moved to Additional Fields section
+            that is collapse by default.
+        </li>
+        <li>
+            The format of the result list has been improved, including more details
+            score codes.
+        </li>
     </ul>
     These changes should make entering results on a phone a much better experience. The changes came
     about after using this with great success for the last several weeks at Lake Harriet.
 </p>
 <h5>Other News</h5>
-<p>We're trying to consolidate our issues lists with the SailScores code at
+<p>
+    We're trying to consolidate our issues lists with the SailScores code at
     <a href="https://github.com/jbfraser1/SailScores/issues" target="_blank">GitHub.</a> Some
-    of the issues have a "Help wanted" tag, where we'd love to hear more input from potential users.</p>
-<p>The big effort of making the scoring systems customizable through a user interface has started.
+    of the issues have a "Help wanted" tag, where we'd love to hear more input from potential users.
+</p>
+<p>
+    The big effort of making the scoring systems customizable through a user interface has started.
     Initially this will focus on supporting low-point scoring, and allowing for customizable
-    discard patterns and score code values, but still making sure a single race can be used in 
-    multiple series.</p>
+    discard patterns and score code values, but still making sure a single race can be used in
+    multiple series.
+</p>
 <br />
 <h3>
     February 25th, 2019
