Info text enhancements

--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -14,28 +14,28 @@
 <br />
 <h3>You can use it</h3>
 <p>
-    SailScores is open-source software. The code is available at
-    <a href="https://github.com/jbfraser1/SailScores">https://github.com/jbfraser1/SailScores</a>.
-    You are welcome to run your own instance of this on your own server(s). I'll provide
-    support as time allows. <b>But even easier:</b> this site can host your club's scores.
-    Contact us at any of the email addresses below for more information. This is currently a free
+    You can host your club's scores on this site. Contact us for the initial club setup.  This is currently a free
     option and we hope to keep it that way.
+</p>
+<p>
+    If you'd rather provide your own servers, SailScores is open-source software. The
+    code is available at
+    <a href="https://github.com/jbfraser1/SailScores">https://github.com/jbfraser1/SailScores</a>.
+    You are welcome to run your own instance of this. I'll provide
+    support as time allows.
 </p>
 <br />
 <h3>Future</h3>
-Planned features include:
+We're working on new features, including:
 <ul>
+    <li>Support for a regatta: different scoring system than the club's usual, and show event competitor lists.</li>
     <li>Integration with social media, such as automatic posting of results to Twitter.</li>
-    <li>Support for a regatta: different scoring system than the club's usual, and add Home club for competitors.</li>
+    <li>Fields to track race conditions, with analysis for competitors in different conditions.</li>
     <li>Import and Export to integrate with existing scoring software.</li>
     <li>Export a series to CSV or HTML so it can be posted on other sites.</li>
     <li>Result trend reporting: Are your races growing?</li>
-    <li>Support for regattas and/or integration with regatta management.</li>
-    <li>Fields to track race conditions, with eventual analysis for competitors in different conditions.</li>
-    <li><s>Track scheduled and abandoned races.</s> <em>Complete, Q2 2019</em></li>
-    <li><s>Quick result entry, especially on mobile devices.</s> <em>Complete, Q1 2019</em></li>
-    <li><s>Support for overlapping series. (Races can be included in multiple series.)</s> <em>Complete, Q1 2019</em></li>
 </ul>
+<p>View the full list of issues and feature requests at <a href="https://github.com/jbfraser1/SailScores/issues">GitHub</a></p>
 <br />
 <h3>Feedback</h3>
 <p>
@@ -44,7 +44,7 @@ Planned features include:
 
 <br />
 <h3>Contact Info</h3>
-Sailscores is written and maintained by Jamie Fraser, <a href="mailto:jamie@widernets.com">jamie@widernets.com</a>,
+Sailscores is maintained by Jamie Fraser, <a href="mailto:jamie@widernets.com">jamie@widernets.com</a>,
 <address>
     <a href="mailto:info@sailscores.com">info@sailscores.com</a><br />
 </address>
