--- a/SailScores.Web/Views/Series/Edit.cshtml
+++ b/SailScores.Web/Views/Series/Edit.cshtml
@@ -1,4 +1,7 @@
-﻿@model SailScores.Web.Models.SailScores.SeriesWithOptionsViewModel
+﻿@using SailScores.Web.Services
+@using SailScores.Api.Enumerations
+
+@model SailScores.Web.Models.SailScores.SeriesWithOptionsViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -46,17 +49,30 @@
                 </select>
                 <span asp-validation-for="SeasonId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ScoringSystemId">Default Scoring System</label>
-                <select id="ScoringSystemId" asp-for="ScoringSystemId" class="form-control">
-                    @foreach (var scoringSystem in Model.ScoringSystemOptions)
+            <div id="seasonSelectGroup" class="form-group">
+                <label asp-for="SeasonId" class="control-label">Season</label>
+                <select asp-for="SeasonId" class="form-control">
+                    <option selected="selected">Select a season...</option>
+                    @foreach (var season in Model.SeasonOptions)
                     {
-                        <option value="@scoringSystem.Id">
-                            @scoringSystem.Name
+                        <option value="@season.Id">
+                            @season.Name
                         </option>
                     }
                 </select>
-                <span asp-validation-for="ScoringSystemId" class="text-danger"></span>
+                <span asp-validation-for="SeasonId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="TrendOption">Calculate Rank Trend</label>
+                <select id="ScoringSystemId" asp-for="TrendOption" class="form-control">
+                    @foreach (var trendOption in EnumHelper<TrendOption>.GetValues(TrendOption.None))
+                    {
+                    <option value="@trendOption">
+                        @(EnumHelper<TrendOption>.GetDisplayValue(trendOption))
+                    </option>
+                    }
+                </select>
+                <span asp-validation-for="TrendOption" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
